// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideBarItem Component handles click on entry in main menu and handles click on submenu 1`] = `
<div>
  <nav
    class="container"
    style="height: 600px; width: 270px;"
  >
    <ul
      class="sidebar"
      style="width: 270px; left: 0px;"
    >
      <li
        class="item"
      >
        <div
          class=""
          data-testid="PARENT-TEST-ID"
        >
          partial url
          <div
            class="label"
          >
            LABEL
          </div>
          <i
            class="icon chevronRight"
            icon="fal,chevron-right"
          />
        </div>
      </li>
      <ul
        class="submenu"
        style="width: 270px; left: 270px;"
      >
        <li
          class="back"
        >
          <div
            class="label"
          >
            <i
              class="icon chevronLeft"
              icon="fal,chevron-left"
            />
            Back to menu
          </div>
        </li>
        <div
          class="divider"
        />
        <li
          class="item"
        >
          <div
            class=""
            data-testid="CHILD-TEST-ID"
          >
            full url
            <div
              class="label"
            >
              LINK1
            </div>
          </div>
        </li>
        <li
          class="item"
        >
          <div
            class=""
          >
            full url
            <div
              class="label"
            >
              LINK2
            </div>
          </div>
        </li>
      </ul>
    </ul>
  </nav>
</div>
`;

exports[`SideBarItem Component handles click on entry in main menu and handles click on submenu 2`] = `
<div>
  <nav
    class="container"
    style="height: 600px; width: 270px;"
  >
    <ul
      class="sidebar sidebarHidden"
      style="width: 270px; left: -270px;"
    >
      <li
        class="item"
      >
        <div
          class=""
          data-testid="PARENT-TEST-ID"
        >
          partial url
          <div
            class="label"
          >
            LABEL
          </div>
          <i
            class="icon chevronRight"
            icon="fal,chevron-right"
          />
        </div>
      </li>
      <ul
        class="submenu visible"
        style="width: 270px; left: 0px;"
      >
        <li
          class="back"
        >
          <div
            class="label"
          >
            <i
              class="icon chevronLeft"
              icon="fal,chevron-left"
            />
            Back to menu
          </div>
        </li>
        <div
          class="divider"
        />
        <li
          class="item"
        >
          <div
            class=""
            data-testid="CHILD-TEST-ID"
          >
            full url
            <div
              class="label"
            >
              LINK1
            </div>
          </div>
        </li>
        <li
          class="item"
        >
          <div
            class=""
          >
            full url
            <div
              class="label"
            >
              LINK2
            </div>
          </div>
        </li>
      </ul>
    </ul>
  </nav>
</div>
`;

exports[`SideBarItem Component handles click on entry in main menu and handles click on submenu 3`] = `
<div>
  <nav
    class="container"
    style="height: 600px; width: 270px;"
  >
    <ul
      class="sidebar sidebarHidden"
      style="width: 270px; left: -270px;"
    >
      <li
        class="item"
      >
        <div
          class=""
          data-testid="PARENT-TEST-ID"
        >
          partial url
          <div
            class="label"
          >
            LABEL
          </div>
          <i
            class="icon chevronRight"
            icon="fal,chevron-right"
          />
        </div>
      </li>
      <ul
        class="submenu visible"
        style="width: 270px; left: 0px;"
      >
        <li
          class="back"
        >
          <div
            class="label"
          >
            <i
              class="icon chevronLeft"
              icon="fal,chevron-left"
            />
            Back to menu
          </div>
        </li>
        <div
          class="divider"
        />
        <li
          class="item"
        >
          <div
            class=""
            data-testid="CHILD-TEST-ID"
          >
            full url
            <div
              class="label"
            >
              LINK1
            </div>
          </div>
        </li>
        <li
          class="item"
        >
          <div
            class=""
          >
            full url
            <div
              class="label"
            >
              LINK2
            </div>
          </div>
        </li>
      </ul>
    </ul>
  </nav>
</div>
`;

exports[`SideBarItem Component renders properly 1`] = `
<div>
  <nav
    class="container"
    style="height: 600px; width: 400px;"
  >
    <ul
      class="sidebar"
      style="width: 400px; left: 0px;"
    >
      <li
        class="item"
      >
        <div
          class=""
        >
          partial url
          <div
            class="label"
          >
            LABEL
          </div>
          <i
            class="icon chevronRight"
            icon="fal,chevron-right"
          />
        </div>
      </li>
      <ul
        class="submenu"
        style="width: 400px; left: 400px;"
      >
        <li
          class="back"
        >
          <div
            class="label"
          >
            <i
              class="icon chevronLeft"
              icon="fal,chevron-left"
            />
            Back to menu
          </div>
        </li>
        <div
          class="divider"
        />
        <li
          class="item"
        >
          <div
            class=""
          >
            full url
            _blank
            <div
              class="label"
            >
              EXTERNAL
            </div>
            <i
              class="icon externalLink"
              icon="fal,external-link"
            />
          </div>
        </li>
        <li
          class="item disabled"
        >
          <div
            class="disabled"
          >
            full url
            <div
              class="label"
            >
              DISABLED
            </div>
          </div>
        </li>
        <li
          class="item"
        >
          <div
            class=""
          >
            full url
            <div
              class="label"
            >
              NORMAL
            </div>
          </div>
        </li>
      </ul>
    </ul>
  </nav>
</div>
`;

exports[`SideBarItem Component renders unfixed 1`] = `
<div>
  <nav
    class="container unfixed"
    style="height: 600px; width: 400px;"
  >
    <ul
      class="sidebar"
      style="width: 400px; left: 0px;"
    >
      <li
        class="item"
      >
        <div
          class=""
        >
          partial url
          <div
            class="label"
          >
            LABEL
          </div>
          <i
            class="icon chevronRight"
            icon="fal,chevron-right"
          />
        </div>
      </li>
      <ul
        class="submenu unfixed"
        style="width: 400px; left: 400px;"
      >
        <li
          class="back"
        >
          <div
            class="label"
          >
            <i
              class="icon chevronLeft"
              icon="fal,chevron-left"
            />
            Back to menu
          </div>
        </li>
        <div
          class="divider"
        />
        <li
          class="item"
        >
          <div
            class=""
          >
            full url
            _blank
            <div
              class="label"
            >
              EXTERNAL
            </div>
            <i
              class="icon externalLink"
              icon="fal,external-link"
            />
          </div>
        </li>
        <li
          class="item disabled"
        >
          <div
            class="disabled"
          >
            full url
            <div
              class="label"
            >
              DISABLED
            </div>
          </div>
        </li>
        <li
          class="item"
        >
          <div
            class=""
          >
            full url
            <div
              class="label"
            >
              NORMAL
            </div>
          </div>
        </li>
      </ul>
    </ul>
  </nav>
</div>
`;

exports[`SideBarItem Component renders with only one subitem visible 1`] = `
<div>
  <nav
    class="container"
    style="height: 600px; width: 270px;"
  >
    <ul
      class="sidebar"
      style="width: 270px; left: 0px;"
    >
      <li
        class="item"
      >
        <div
          class=""
        >
          partial url
          <div
            class="label"
          >
            LABEL
          </div>
        </div>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`SideBarItem Component renders with url as Location 1`] = `
<div>
  <nav
    class="container"
    style="height: 600px; width: 270px;"
  >
    <ul
      class="sidebar"
      style="width: 270px; left: 0px;"
    >
      <li
        class="item"
      >
        <div
          class=""
        >
          partial url
          <div
            class="label"
          >
            LABEL
          </div>
          <i
            class="icon chevronRight"
            icon="fal,chevron-right"
          />
        </div>
      </li>
      <ul
        class="submenu"
        style="width: 270px; left: 270px;"
      >
        <li
          class="back"
        >
          <div
            class="label"
          >
            <i
              class="icon chevronLeft"
              icon="fal,chevron-left"
            />
            Back to menu
          </div>
        </li>
        <div
          class="divider"
        />
        <li
          class="item"
        >
          <div
            class=""
          >
            full url
            <div
              class="label"
            >
              LINK
            </div>
          </div>
        </li>
        <li
          class="item"
        >
          <div
            class=""
          >
            full url
            <div
              class="label"
            >
              Link2
            </div>
          </div>
        </li>
      </ul>
    </ul>
  </nav>
</div>
`;

exports[`SideBarItem Component should generate an error when not in a SideBar component 1`] = `
<div>
  <li
    class="item"
  >
    <div
      class=""
    >
      partial url
      <div
        class="label"
      >
        LABEL
      </div>
    </div>
  </li>
</div>
`;

exports[`SideBarItem Component should generate an error when not in a SideBar component 2`] = `<div />`;
